tests/badexpression1.err
3: error: bad operand types int, int for binary operator '&&'
	int a = (5 && 2);
	           ^
