tests/badexpression1.juice
// invalid operator/type combination

int a = (5 && 2);